--- a/style.css
+++ b/style.css
@@ -1,27 +1,116 @@
-root {
+* {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Ysabeau', sans-serif;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 5fr;
+  grid-template-columns: 1fr 3.5fr;
+  grid-template-rows: 1fr 3.5fr 0.5fr;
+  width: 100vw;
+  height: 100vh;
 }
 
 .sidebar {
-  background-color: #008751;
+  background-color: #FF633A;
   grid-row: 1 / 3;
   grid-column: 1 / 2;
 }
 
+.sidebar>.logo-div {
+  display: grid;
+  grid-template-rows: 2fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  margin: 10px 50px 10px 10px;
+}
+
+.sidebar>.logo-div>img {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  height: 7rem;
+}
+
+.sidebar>.logo-div>h1 {
+ grid-column: 2 / 3;
+ grid-row: 1 / 2; 
+ font-size: 2rem;
+}
+
+.sidebar>.logo-div>.subheading {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  font-size: 1.5rem;
+}
+
+.sidebar>.nav-grid {
+  padding: 30px;
+  display: grid;
+  grid-gap: 5px;
+}
+
+.sidebar>.nav-grid>.nav-grid-item {
+  margin: 3px;
+  font-size: 22px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.sidebar>.nav-grid>.nav-grid-item>img {
+  height: 20px;
+  margin-right: 10px;
+}
+
+.sidebar>.tools-grid {
+  padding: 30px;
+  display: grid;
+  grid-gap: 5px;
+}
+
+.sidebar>.tools-grid>.tools-grid-item {
+  margin: 3px;
+  font-size: 22px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.sidebar>.tools-grid>.tools-grid-item>img {
+  height: 20px;
+  margin-right: 10px;
+}
+
 .header {
-  background-color: #E8112D;
+  background-color: #3ACDFF;
   grid-row: 1 / 2;
   grid-column: 2 / 3;
 }
 
 .main-content-container {
-  background-color: #FCD116;
+  background-color: #F8C362;
   grid-row: 2 / 3;
   grid-column: 2 / 3;
+}
+
+.footer {
+  background-color: darkgreen;
+  grid-row: 3 /4;
+  grid-column: 1 / 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer>p {
+  color: white;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.footer>a {
+  color: white;
+  font-size: 16px;
 }
